// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`vue/UIP > renders correctly - basic 1`] = `
<p
  class="ui-p ui-p--large"
>
  Test
</p>
`;

exports[`vue/UIP > renders correctly - with id 1`] = `
<p
  class="ui-p"
  id="test"
>
  Test
</p>
`;

exports[`vue/UIP > renders correctly - with itemProp 1`] = `
<p
  class="ui-p"
  itemprop="description"
>
  Test
</p>
`;
